# wechat_adb_robot

./: .gitignore  LICENSE.txt  README.md  adb-wifi.sh  feed_monitor.py  package-lock.json  pyproject.toml  run.sh  scrape.js  sync_to_es.py  view.json
api/: main.py  run.py
core/: robot.py
dev/: dev_utils.py
lib/: article.py  db.py  scrcpy.py
scripts/: feed_monitor.py
