[project]
name = "wechat-adb-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=5.3.0",
    "python-dotenv>=1.0.1",
    "androidviewclient>=23.0.3",
    "pyperclip>=1.9.0",
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "requests>=2.32.3",
]
